Bug 1787361 - Fix scrollbar touch drag detection when processing touch input.  a=dsmith

Populate hitScrollbarNode after we have cloned the hit test to correctly
determine if we are in a scrollbar touch drag.

Original Revision: https://phabricator.services.mozilla.com/D155733

Differential Revision: https://phabricator.services.mozilla.com/D155864